--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name=".data.WeatherProvider"
             android:authorities="@string/content_authority"
             android:exported="false" />
+
+        <service
+            android:name=".sync.WeatherSyncIntentService"
+            android:exported="false" />
     </application>
 
 </manifest>
